[DL] T3: finish notes on sections 01 and 02, start notes on section 03 [skip ci]

--- a/src/Notes/Master/2C_2C/DL/02/01_conv_nets.html
+++ b/src/Notes/Master/2C_2C/DL/02/01_conv_nets.html
@@ -31,7 +31,7 @@
     <hr>
     <div class="content">
 <p>
-<a href="index.html">Back</a>
+<a href="../index.html">Back</a>
 </p>
 
 <div id="Convolutional Nets"><h1 id="Convolutional Nets" class="header"><a href="#Convolutional Nets">Convolutional Nets</a></h1></div>
