--- a/src/Notes/Master/2C_2C/DL/02/02_rnn.html
+++ b/src/Notes/Master/2C_2C/DL/02/02_rnn.html
@@ -31,7 +31,7 @@
     <hr>
     <div class="content">
 <p>
-<a href="index.html">Back</a>
+<a href="../index.html">Back</a>
 </p>
 
 <div id="Recurrent Neural Nets"><h1 id="Recurrent Neural Nets" class="header"><a href="#Recurrent Neural Nets">Recurrent Neural Nets</a></h1></div>
