--- a/src/Notes/Master/2C_2C/DL/03/proveedores.html
+++ b/src/Notes/Master/2C_2C/DL/03/proveedores.html
@@ -3,7 +3,7 @@
     <link rel="Stylesheet" type="text/css" href="../../../../../../src/style/index.css">
     <!-- Custom styling from vimwiki -->
     <link rel="Stylesheet" type="text/css" href="../../../../../../src/style/custom.css">
-    <title>T2. Tipologías de las redes neuronales profundas</title>
+    <title>Proveedores</title>
   <script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6" id="latex_script" data-description="Support for latex"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" data-description="Support for latex"></script><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/search.css" data-description="Styling for search"><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/atom-one-light.min.css" data-description="Code highlight"><link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/public/icon.svg" data-description="Page icon"></head>
   <body>
     <a href="https://albamr09.github.io/" style="
@@ -34,24 +34,22 @@
 <a href="../index.html">Back</a>
 </p>
 
-<div id="T2. Tipologías de las redes neuronales profundas"><h1 id="T2. Tipologías de las redes neuronales profundas" class="header"><a href="#T2. Tipologías de las redes neuronales profundas">T2. Tipologías de las redes neuronales profundas</a></h1></div>
+<div id="Proveedores"><h1 id="Proveedores" class="header"><a href="#Proveedores">Proveedores</a></h1></div>
 
 <hr>
 
-<ol>
+<p>
+Hay básicamente dos tipos de proveedores:
+</p>
+
+<ul>
 <li>
-<a href="01_conv_nets.html">Convolutional Nets</a>
+Locales: Scikit-Learn,TensorFlow, Deeplearning4J, PIO, H2O, Hadoop/Spark, etc.
 
 </li><li>
-<a href="02_rnn.html">Recurrent Neural Networks</a>
+Orientados a la nube: ABM, BigML, Google ML, AmazonML ,AzureML , Watson IBM, etc.
 
-</li><li>
-<a href="03_boltzmann.html">Boltzmann Based Networks</a>
-
-</li><li>
-<a href="04_autoencoders.html">Autoencoders</a>
-
-</li></ol>
+</li></ul>
 </div>
   
 
