--- a/src/Notes/Master/2C_2C/DL/index.html
+++ b/src/Notes/Master/2C_2C/DL/index.html
@@ -43,8 +43,36 @@
 <a href="01_foundation.html">Fundamentos de las Redes Neuronales Profundas</a>
 
 </li><li>
-<a href="02/index.html">Tipologías de las redes neuronales profundas</a>
+Tipologías de las redes neuronales profundas
 
+<ol>
+<li>
+<a href="02/01_conv_nets.html">Convolutional Nets</a>
+
+</li><li>
+<a href="02/02_rnn.html">Recurrent Neural Networks</a>
+
+</li><li>
+<a href="02/03_boltzmann.html">Boltzmann Based Networks</a>
+
+</li><li>
+<a href="02/04_autoencoders.html">Autoencoders</a>
+
+</li></ol>
+</li><li>
+Herramientas y estrategias de programación e implemetación de redes neuronales
+
+<ol>
+<li>
+<a href="03/01_frameworks.html">Frameworks</a>
+
+</li><li>
+<a href="03/02_computacion_acelerada.html">Computación Acelerada</a>
+
+</li><li>
+<a href="03/proveedores.html">Proveedores</a>
+
+</li></ol>
 </li></ol>
 </div>
   
