--- a/src/Notes/Master/2C_2C/MBJ/T2/02.html
+++ b/src/Notes/Master/2C_2C/MBJ/T2/02.html
@@ -31,7 +31,7 @@
     <hr>
     <div class="content">
 <p>
-<a href="index.html">Back</a>
+<a href="../index.html">Back</a>
 </p>
 
 <div id="Exchangeability and hierarchical models"><h1 id="Exchangeability and hierarchical models" class="header"><a href="#Exchangeability and hierarchical models">Exchangeability and hierarchical models</a></h1></div>
