--- a/src/Notes/Master/2C_2C/MBJ/T2/03.html
+++ b/src/Notes/Master/2C_2C/MBJ/T2/03.html
@@ -31,7 +31,7 @@
     <hr>
     <div class="content">
 <p>
-<a href="index.html">Back</a>
+<a href="../index.html">Back</a>
 </p>
 
 <div id="Bayesian analysis of conjugate hierarchical models"><h1 id="Bayesian analysis of conjugate hierarchical models" class="header"><a href="#Bayesian analysis of conjugate hierarchical models">Bayesian analysis of conjugate hierarchical models</a></h1></div>
