--- a/src/Notes/Master/2C_2C/MBJ/T2/04_normal_model.html
+++ b/src/Notes/Master/2C_2C/MBJ/T2/04_normal_model.html
@@ -31,7 +31,7 @@
     <hr>
     <div class="content">
 <p>
-<a href="index.html">Back</a>
+<a href="../index.html">Back</a>
 </p>
 
 <div id="Normal model with exchangeable parameters"><h1 id="Normal model with exchangeable parameters" class="header"><a href="#Normal model with exchangeable parameters">Normal model with exchangeable parameters</a></h1></div>
