--- a/src/Notes/Master/2C_2C/MBJ/T2/05_example_normal.html
+++ b/src/Notes/Master/2C_2C/MBJ/T2/05_example_normal.html
@@ -31,7 +31,7 @@
     <hr>
     <div class="content">
 <p>
-<a href="index.html">Back</a>
+<a href="../index.html">Back</a>
 </p>
 
 <div id="Example: parallel experiments in eight schools"><h1 id="Example: parallel experiments in eight schools" class="header"><a href="#Example: parallel experiments in eight schools">Example: parallel experiments in eight schools</a></h1></div>
