--- a/src/Notes/Master/2C_2C/MBJ/T2/06_hierarchical_meta_analysis.html
+++ b/src/Notes/Master/2C_2C/MBJ/T2/06_hierarchical_meta_analysis.html
@@ -31,7 +31,7 @@
     <hr>
     <div class="content">
 <p>
-<a href="index.html">Back</a>
+<a href="../index.html">Back</a>
 </p>
 
 <div id="Hierarchical modeling applied to a meta-analysis"><h1 id="Hierarchical modeling applied to a meta-analysis" class="header"><a href="#Hierarchical modeling applied to a meta-analysis">Hierarchical modeling applied to a meta-analysis</a></h1></div>
