--- a/src/Notes/Master/2C_2C/MBJ/T2/11_introduction.html
+++ b/src/Notes/Master/2C_2C/MBJ/T2/11_introduction.html
@@ -31,7 +31,7 @@
     <hr>
     <div class="content">
 <p>
-<a href="index.html">Back</a>
+<a href="../index.html">Back</a>
 </p>
 
 <div id="Introduction"><h1 id="Introduction" class="header"><a href="#Introduction">Introduction</a></h1></div>
