--- a/src/Notes/Master/2C_2C/MBJ/T2/12_hierarchical_normal_modeling.html
+++ b/src/Notes/Master/2C_2C/MBJ/T2/12_hierarchical_normal_modeling.html
@@ -31,7 +31,7 @@
     <hr>
     <div class="content">
 <p>
-<a href="index.html">Back</a>
+<a href="../index.html">Back</a>
 </p>
 
 <div id="Hierarchical Normal Modeling"><h1 id="Hierarchical Normal Modeling" class="header"><a href="#Hierarchical Normal Modeling">Hierarchical Normal Modeling</a></h1></div>
