--- a/src/Notes/Master/2C_2C/DL/02/03_boltzmann.html
+++ b/src/Notes/Master/2C_2C/DL/02/03_boltzmann.html
@@ -31,7 +31,7 @@
     <hr>
     <div class="content">
 <p>
-<a href="index.html">Back</a>
+<a href="../index.html">Back</a>
 </p>
 
 <div id="Boltzmann Based Networks"><h1 id="Boltzmann Based Networks" class="header"><a href="#Boltzmann Based Networks">Boltzmann Based Networks</a></h1></div>
