--- a/src/Notes/Master/2C_2C/DL/02/04_autoencoders.html
+++ b/src/Notes/Master/2C_2C/DL/02/04_autoencoders.html
@@ -31,7 +31,7 @@
     <hr>
     <div class="content">
 <p>
-<a href="index.html">Back</a>
+<a href="../index.html">Back</a>
 </p>
 
 <div id="Autoencoders"><h1 id="Autoencoders" class="header"><a href="#Autoencoders">Autoencoders</a></h1></div>
