--- a/src/Notes/Master/2C_2C/MBJ/T2/01.html
+++ b/src/Notes/Master/2C_2C/MBJ/T2/01.html
@@ -31,7 +31,7 @@
     <hr>
     <div class="content">
 <p>
-<a href="index.html">Back</a>
+<a href="../index.html">Back</a>
 </p>
 
 <div id="Constructing a parametrized prior distribution"><h1 id="Constructing a parametrized prior distribution" class="header"><a href="#Constructing a parametrized prior distribution">Constructing a parametrized prior distribution</a></h1></div>
