--- a/src/Notes/Master/2C_2C/MBJ/T2/13_hierarchical_beta_binomial_modeling.html
+++ b/src/Notes/Master/2C_2C/MBJ/T2/13_hierarchical_beta_binomial_modeling.html
@@ -31,7 +31,7 @@
     <hr>
     <div class="content">
 <p>
-<a href="index.html">Back</a>
+<a href="../index.html">Back</a>
 </p>
 
 <div id="Hierarchical Beta-Binomial Modeling"><h1 id="Hierarchical Beta-Binomial Modeling" class="header"><a href="#Hierarchical Beta-Binomial Modeling">Hierarchical Beta-Binomial Modeling</a></h1></div>
