--- a/src/Notes/Master/2C_2C/MBJ/index.html
+++ b/src/Notes/Master/2C_2C/MBJ/index.html
@@ -45,7 +45,53 @@
 </li><li>
 <a href="T2/index.html">Modelos Jerarquicos</a>
 
+<ol>
+<li>
+<a href="T2/01.html">Constructing a parametrized prior distribution</a>
+
+</li><li>
+<a href="T2/02.html">Exchangeability and hierarchical models</a>
+
+</li><li>
+<a href="T2/03.html">Bayesian analysis of conjugate hierarchical models</a>
+
+</li><li>
+<a href="T2/04_normal_model.html">Normal model with exchangeable parameters</a>
+
+</li><li>
+<a href="T2/05_example_normal.html">Example: parallel experiments in eight schools</a>
+
+</li><li>
+<a href="T2/06_hierarchical_meta_analysis.html">Hierarchical modeling applied to meta-analysis</a>
+
+</li><li>
+<a href="T2/07_weakly_informative_priors.html">Weakly Informative Priors</a>
+
 </li></ol>
+</li></ol>
+<div id="Modelos Bayesianos Jerárquicos-Appendix"><h2 id="Appendix" class="header"><a href="#Modelos Bayesianos Jerárquicos-Appendix">Appendix</a></h2></div>
+
+<div id="Modelos Bayesianos Jerárquicos-Appendix-T2"><h3 id="T2" class="header"><a href="#Modelos Bayesianos Jerárquicos-Appendix-T2">T2</a></h3></div>
+
+<p>
+Thanks to how little I understand this book i will use other sources in order to properly understand Bayesian Hierarchical Modeling, the contents on the following chapter explains how hierarchical Bayesian models came to be and its appeal. Then on section 2 it lays out Hierarchical Nolmal Modeling followed by an explanation on hierarchical Beta-Binomial modeling on section 3.
+</p>
+
+<p>
+<a href="https://bayesball.github.io/BOOK/bayesian-hierarchical-modeling.html">Bayesian Hierarchical Modeling</a>
+</p>
+
+<ul>
+<li>
+<a href="T2/11_introduction.html">Introduction</a>
+
+</li><li>
+<a href="T2/12_hierarchical_normal_modeling.html">Hierarchical Normal Modeling</a>
+
+</li><li>
+<a href="T2/13_hierarchical_beta_binomial_modeling.html">Hierarchical Beta-Binomial Modeling</a>
+
+</li></ul>
 </div>
   
 
