[MBJ] Fix typo [skip ci]

--- a/src/Notes/DataScience/Master/2C_2C/MBJ/T2/04_normal_model.html
+++ b/src/Notes/DataScience/Master/2C_2C/MBJ/T2/04_normal_model.html
@@ -310,7 +310,7 @@ To obtain posterior predictive simulations of new data \(\tilde{y}\) for \(\tild
 Draw \((\mu, \tau)\) from their posterior distribution \(p(\mu, \tau|y)\)
 
 </li><li>
-Draw \(\tilde{J}\) new parameters \(\tilde{\theta} = \tilde{\theta}_1, \cdots, \tilde{\theta}_{\tilde{J}}\) from the population distribution \(p(\tilde{\theta}|\mu, tau)\).
+Draw \(\tilde{J}\) new parameters \(\tilde{\theta} = \tilde{\theta}_1, \cdots, \tilde{\theta}_{\tilde{J}}\) from the population distribution \(p(\tilde{\theta}|\mu, \tau)\).
 
 </li><li>
 Draw \(\tilde{y}\) given \(\tilde{\theta}\) from the sampling distribution.
