[DL] T3: finish notes [skip ci]

--- a/src/Notes/DataScience/Master/2C_2C/DL/03/03_proveedores.html
+++ b/src/Notes/DataScience/Master/2C_2C/DL/03/03_proveedores.html
@@ -50,6 +50,113 @@ Locales: Scikit-Learn,TensorFlow, Deeplearning4J, PIO, H2O, Hadoop/Spark, etc.
 Orientados a la nube: ABM, BigML, Google ML, AmazonML ,AzureML , Watson IBM, etc.
 
 </li></ul>
+<p>
+Arquitectura:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/providers_architecture.png" alt="Providers Architecture" style="height:300px;">
+</p>
+
+<div id="Proveedores-Deep Cognition"><h2 id="Deep Cognition" class="header"><a href="#Proveedores-Deep Cognition">Deep Cognition</a></h2></div>
+
+<p>
+Se trata de una plataforma que incorpora un IDE visual que permite definir una red neuronal. Se puede utilizar:
+</p>
+
+<ul>
+<li>
+En la nube
+
+</li><li>
+En local
+
+</li><li>
+En una máquina virtual
+
+</li><li>
+En una máquina de azure
+
+</li></ul>
+<p>
+<img src="https://albamr09.github.io/public/assets/deep_congnition.png" alt="Deep Cognition" style="height:500px;">
+</p>
+
+<div id="Proveedores-H2O.AI"><h2 id="H2O.AI" class="header"><a href="#Proveedores-H2O.AI">H2O.AI</a></h2></div>
+
+<p>
+Su arquitecture se detalla en la siguiente imagen:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/h2o_architecture.png" alt="H2O Architecture" style="height:500px;">
+</p>
+
+<p>
+En la parte superior vemos los lenguajes que soporta:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/h2o_architecture_1.png" alt="H2O Architecture" style="height:100px;">
+</p>
+
+<p>
+Seguidamente tenemos un bloque de tradcutores (Rapids en C++ y Scala en Java):
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/h2o_architecture_2.png" alt="H2O Architecture" style="height:100px;">
+</p>
+
+<p>
+A continuación tenemos los algoritmos definidos así como la herramienta de predcción para H2O:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/h2o_architecture_3.png" alt="H2O Architecture" style="height:100px;">
+</p>
+
+<p>
+En la siguiente imagen tenemos la parte de la gestión de la computación que se lleva a cabo encima de clusters Spark/Hadoop o sobre la distribución standalone de H2O:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/h2o_architecture_4.png" alt="H2O Architecture" style="height:300px;">
+</p>
+
+<div id="Proveedores-H2O.AI-Auto ML"><h3 id="Auto ML" class="header"><a href="#Proveedores-H2O.AI-Auto ML">Auto ML</a></h3></div>
+
+<p>
+Permite evaluar modelos dado un conjunto de datos en base a una serie de métricas:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/auto_ml.png" alt="Auto ML" style="height:500px;">
+</p>
+
+<div id="Proveedores-H2O.AI-Driverless AI"><h3 id="Driverless AI" class="header"><a href="#Proveedores-H2O.AI-Driverless AI">Driverless AI</a></h3></div>
+
+<p>
+Permite desarrollar el pipeline completo de H2O de forma visual, tal que permite automatizar tareas.
+</p>
+
+<div id="Proveedores-Big ML"><h2 id="Big ML" class="header"><a href="#Proveedores-Big ML">Big ML</a></h2></div>
+
+<p>
+Se trata de una empresa española. Define algoritmos de clasificación, regresión, análisis de clusters, detección de anomalías, descubrimiento de asociación y modelado. Destaca sobretodo en el preprocesamiento de datos, visualización y en la evaluación de modelo.
+</p>
+
+<p>
+No soporta ni CNN (no soporta capas de convolución ni de pooling) ni RNN.
+</p>
+
+<p>
+Los parámetros soportados son los siguientes:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/big_ml_deepnets_limitations.png" alt="Big ML Limitations" style="height:500px;">
+</p>
 </div>
   
 
