--- a/src/Notes/DataScience/Master/2C_2C/DL/index.html
+++ b/src/Notes/DataScience/Master/2C_2C/DL/index.html
@@ -70,7 +70,7 @@ Herramientas y estrategias de programación e implemetación de redes neuronales
 <a href="03/02_computacion_acelerada.html">Computación Acelerada</a>
 
 </li><li>
-<a href="03/proveedores.html">Proveedores</a>
+<a href="03/03_proveedores.html">Proveedores</a>
 
 </li></ol>
 </li></ol>
