[MBJ] T3: start notes on section 01 [skip ci]

--- a/src/Notes/DataScience/Master/2C_2C/MBJ/index.html
+++ b/src/Notes/DataScience/Master/2C_2C/MBJ/index.html
@@ -43,7 +43,7 @@
 <a href="01_intro.html">Introduccion a la Inferencia Bayesiana</a>
 
 </li><li>
-<a href="T2/index.html">Modelos Jerarquicos</a>
+Modelos Jerarquicos
 
 <ol>
 <li>
@@ -66,6 +66,14 @@
 
 </li><li>
 <a href="T2/07_weakly_informative_priors.html">Weakly Informative Priors</a>
+
+</li></ol>
+</li><li>
+Evaluación y Comparación de Modelos
+
+<ol>
+<li>
+<a href="T3/01_measure_precditive_accuracy.html">Measures of predictive accuracy</a>
 
 </li></ol>
 </li></ol>
